<resources>
    <string name="app_name">ta</string>
    <string name="action_settings">Settings</string>
    <string name="image_details_header">Details:</string>
    <string name="image_preview_header">Preview:</string>
    <string name="loading_message">Uploading image. Please wait.</string>

    <string name="dialog_select_prompt">Choose a picture</string>
    <string name="dialog_select_camera">Camera</string>
    <string name="dialog_select_gallery">Gallery</string>

    <string name="hint_id">ID를 입력하세요</string>
    <string name="hint_password">패스워드를 입력하세요</string>
    <string name="hint_name">성명을 입력하세요</string>
    <string name="hint_mobileNO">휴대폰번호를 입력하세요</string>
    <string name="hint_age">나이를 입력하세요</string>
    <string name="btn_login">로그인</string>
    <string name="btn_register">회원가입</string>
    <string name="btn_logout">로그아웃</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="logout">logout</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>

    <string name="image_picker_error">Something is wrong with that image. Pick a different one please.</string>
</resources>