<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_register"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Tour Aid"
        android:textSize="60sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_register"
                android:hint="@string/hint_id"
                android:inputType="textCapWords"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_register"
                android:hint="@string/hint_password"
                android:inputType="textEmailAddress"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="#64D3CD"
                android:text="@string/btn_login"
                android:textColor="@color/black"
                app:backgroundTint="#FFF79A" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_weight="1"
                android:background="#64D3CD"
                android:text="@string/btn_register"
                android:textColor="@color/black"
                app:backgroundTint="#FFF79A" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>